# orchestrate

./: .gitignore  CHANGELOG.md  COMPREHENSIVE_REVIEW.md  Cargo.toml  E2E_TEST_GENERATION_EXAMPLE.md  EPIC_008_IMPLEMENTATION_SUMMARY.md  EPIC_011_DOCUMENTATION_SUMMARY.md  MANIFEST  README.md  STORY-5-SUMMARY.md  STORY-7-SUMMARY.md  STORY_10_IMPLEMENTATION_SUMMARY.md  STORY_10_PIPELINE_TEMPLATES_SUMMARY.md  STORY_11_DEPLOYMENT_DASHBOARD_UI_SUMMARY.md  STORY_11_MONITORING_DASHBOARD_UI_SUMMARY.md  STORY_11_TEST_DASHBOARD_UI_SUMMARY.md  STORY_12_FEATURE_FLAGS_SUMMARY.md  STORY_1_SUMMARY.md  STORY_2_CUSTOM_BUSINESS_METRICS.md  STORY_2_ENVIRONMENT_CONFIG_SUMMARY.md  STORY_2_PIPELINE_PARSER_SUMMARY.md  STORY_2_SUMMARY.md  STORY_2_UNIT_TEST_GENERATION_SUMMARY.md  STORY_3_ALERTING_SUMMARY.md  STORY_3_DEPLOYMENT_STRATEGIES_SUMMARY.md  STORY_3_SUMMARY.md  STORY_4_NOTIFICATION_CHANNELS_SUMMARY.md  STORY_5_ALERT_CLI_SUMMARY.md  STORY_5_SUMMARY.md  STORY_5_TEST_COVERAGE_ANALYSIS_SUMMARY.md  STORY_6_OPENTELEMETRY_TRACING_SUMMARY.md  STORY_6_POST_DEPLOY_VERIFICATION_SUMMARY.md  STORY_6_ROLLBACK_SUMMARY.md  STORY_6_TEST_QUALITY_VALIDATION_SUMMARY.md  STORY_7_CLI_SUMMARY.md  STORY_7_SUMMARY.md  STORY_8_COMPLETION.md  STORY_8_PIPELINE_API_SUMMARY.md  STORY_8_RELEASE_MANAGEMENT_SUMMARY.md  STORY_8_SUMMARY.md  (+10 more)
.claude/agents/: bmad-planner.md  (+14 more)
crates/orchestrate-cli/: Cargo.toml
crates/orchestrate-cli/src/: main.rs
crates/orchestrate-cli/tests/: alert_cli_test.rs  deployment_cli_test.rs  pipeline_init_test.rs  schedule_cli_test.rs  test_cli_test.rs  webhook_cli_test.rs
crates/orchestrate-core/: Cargo.toml
crates/orchestrate-core/src/: agent.rs  agent_continuation.rs  alerting.rs  approval.rs  approval_service.rs  audit.rs  autonomous_session.rs  change_test_analyzer.rs  ci_integration.rs  code_review.rs  condition_evaluator.rs  context_summary.rs  cost_analytics.rs  coverage.rs  cron.rs  database.rs  database_alerting_tests.rs  database_approval_tests.rs  database_autonomous_session_tests.rs  database_continuation_tests.rs  database_cost_tests.rs  database_edge_case_tests.rs  database_environment_tests.rs  database_incident_tests.rs  database_learning_tests.rs  database_multi_repo_tests.rs  database_notifications_tests.rs  database_performance_tests.rs  database_pipeline_tests.rs  database_recovery_tests.rs  database_requirements_tests.rs  database_slack_tests.rs  database_stuck_detection_tests.rs  database_webhook_tests.rs  database_work_evaluation_tests.rs  decision_engine.rs  deployment.rs  deployment_executor.rs  deployment_rollback.rs  deployment_strategy.rs  (+57 more)
crates/orchestrate-core/src/ci/: circleci.rs  client.rs  failure_handler.rs  github_actions.rs  gitlab_ci.rs  mod.rs  result_parser.rs
crates/orchestrate-core/src/network/: coordinator.rs  dependency.rs  mod.rs  skills.rs  state.rs  validation.rs
crates/orchestrate-core/tests/: change_analyzer_integration_test.rs  cron_integration_tests.rs  schedule_tests.rs
crates/orchestrate-github/: Cargo.toml
crates/orchestrate-github/src/: client.rs  lib.rs  pr.rs  review.rs
crates/orchestrate-web/: Cargo.toml
crates/orchestrate-web/src/: api.rs  autonomous_api.rs  event_handlers.rs  lib.rs  metrics.rs  monitoring.rs  schedule_executor.rs  ui.rs  webhook.rs  webhook_processor.rs  websocket.rs
crates/orchestrate-web/static/: index.html
crates/orchestrate-web/static/assets/: index-41WEyFy4.js  index-B9-Zexz1.css  index-BDF1c1In.css  index-Beg8K-p6.js  index-Bxqpiqf6.css  index-C3YC5Jkp.js  index-C4cy83Os.css  index-CCCKpzIT.css  index-CEjAJTh-.js  index-CHMUT8qQ.js  index-CcY23d37.js  index-DMZgxGAv.js  index-Dhnl9BDh.js  index-DnDPuVt4.js  index-E0y5Mn1I.css  index-HBAejlOn.js  index-U9aklkdO.css  index-ehsHoLgW.css
crates/orchestrate-web/static/css/: style.css
crates/orchestrate-web/static/js/: app.js
crates/orchestrate-web/templates/: base.html  dashboard.html
crates/orchestrate-web/templates/agents/: detail.html  list.html
crates/orchestrate-web/tests/: ci_status_integration_test.rs  issue_opened_integration_test.rs  metrics_integration_test.rs  pr_opened_integration_test.rs  pr_review_integration_test.rs  test_api_integration_test.rs  webhook_config_integration_test.rs  webhook_integration_test.rs
docs/: AGENT_COMMUNICATION_PATTERNS.md  GREENFIELD_ANALYSIS.md  USE_CASES.md  deployment-strategies.md  metrics-endpoint.md  pipeline-yaml-format.md  property-based-testing.md  property-testing-quick-ref.md  story-5-deployment-execution-summary.md  story-7-rollback-implementation.md  test-generation-guide.md  test-quality-validation.md  webhook-configuration.md
examples/: pipeline-rollback.yaml  test-pipeline.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
grafana/: DASHBOARDS.md  README.md  alertmanager.example.yml  alerts.example.yml  docker-compose.example.yml  prometheus.example.yml  test_dashboards.sh
migrations/: 001_initial.sql  002_agent_network.sql  003_step_outputs.sql  004_custom_instructions.sql  005_token_tracking.sql  006_pipelines.sql  006_webhook_events.sql  007_pipelines.sql  007_schedules.sql  007_test_coverage.sql  008_test_quality.sql  009_approvals.sql  010_rollback_events.sql  011_success_patterns.sql  012_feedback.sql  012_multi_repo.sql  013_environments.sql  013_experiments.sql  014_deployments.sql  014_model_selection.sql  015_deployment_verification.sql  015_prompt_optimization.sql  016_alerting.sql  016_ci_integration.sql  016_deployment_rollbacks.sql  016_incidents.sql  016_requirements.sql  016_slack_integration.sql  017_feature_flags.sql  017_notification_channels.sql  018_cost_analytics.sql  019_audit_log.sql  020_autonomous_sessions.sql  021_agent_continuations.sql  022_work_evaluations.sql  023_recovery_attempts.sql  024_story_evaluations.sql  025_review_iterations.sql  026_edge_case_handling.sql  027_add_foreign_keys_and_indexes.sql
scripts/: build-frontend.sh  bump-version.sh
tests/: example_pipelines_test.rs  integration_tests.rs  pipeline_cli_tests.rs  pipeline_executor_integration_test.rs  pipeline_parser_integration_test.rs
(+171 files in other folders)
