[workspace]
resolver = "2"
members = [
    "crates/orchestrate-core",
    "crates/orchestrate-claude",
    "crates/orchestrate-github",
    "crates/orchestrate-web",
    "crates/orchestrate-cli",
]

# Integration tests package
[package]
name = "orchestrate-tests"
version.workspace = true
edition.workspace = true
publish = false

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[dev-dependencies]
orchestrate-core.workspace = true
orchestrate-web.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4", features = ["util"] }
axum.workspace = true
serde_json.workspace = true
uuid.workspace = true
http-body-util = "0.1"
futures = "0.3"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["hanibalsk"]
license = "MIT"
repository = "https://github.com/hanibalsk/orchestrate"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "json", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP/WebSocket
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.11", features = ["json"] }

# Templates
askama = "0.12"
askama_axum = "0.4"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
shellexpand = "3.1"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"

# Internal crates
orchestrate-core = { path = "crates/orchestrate-core" }
orchestrate-claude = { path = "crates/orchestrate-claude" }
orchestrate-github = { path = "crates/orchestrate-github" }
orchestrate-web = { path = "crates/orchestrate-web" }
