[package]
name = "orchestrate-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "orchestrate"
path = "src/main.rs"

[dependencies]
orchestrate-core.workspace = true
orchestrate-claude.workspace = true
orchestrate-github.workspace = true
orchestrate-web.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
shellexpand.workspace = true
axum.workspace = true
regex.workspace = true
rand = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
