[package]
name = "orchestrate-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
cron = "0.15.0"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"
