[package]
name = "orchestrate-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
once_cell = "1.19"
sha2.workspace = true
hex.workspace = true
cron = "0.15.0"
md5 = "0.7"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile = "3.10"
