[package]
name = "orchestrate-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
orchestrate-core.workspace = true
orchestrate-github.workspace = true
tokio.workspace = true
axum.workspace = true
tower = { workspace = true, features = ["util"] }
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
futures.workspace = true
chrono.workspace = true
secrecy = "0.8"
hmac = "0.12"
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3.10"
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
hmac = "0.12"
sha2.workspace = true
hex.workspace = true
